wayland/surface: don't throw away damage on multiple sync subsurface commits

Commits are always additive, even for sync subsurfaces. When the client commits
damage on a subsurface and then commits on it again, before committing the
parent surface, that damage must still be applied.

BUG: 514599